--- a/music.html
+++ b/music.html
@@ -25,37 +25,40 @@
       </header>
 
       <main>
-        <p id="from"><i class="fas fa-map-marker-alt "></i> Fukuoka/Japan</p>
-        <section id="galla">
-          <article>
-            <img src="1.png" alt="">
-          </article>
+        <div class="movie">
+          <p><iframe width="500" height="315" src="https://www.youtube.com/embed/v7TAWHKYTYA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
-          <article>
-            <img src="2.png" alt="">
-          </article>
+          <a href="https://open.spotify.com/album/69daI64fYAT6R41YYVu0aE?si=8C8urKzXTZmLoqhepfMcDA"><i class="fab fa-spotify fa-2x"></i></a>
+          <a href="https://music.apple.com/jp/album/turn-on-tune-in-single/1497476949"><i class="fab fa-apple fa-2x"></i></a>
+          <p>Turn on Tune in <br></p>
+        </div>
 
-          <article>
-            <img src="3.png" alt="">
-          </article>
+       <div class="movie">
+        <iframe width="500" height="315" src="https://www.youtube.com/embed/MZQm7CPclZc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Ya</p>
+       </div>
 
-          <article>
-            <img src="4.png" alt="">
-          </article>
-        </section>
+       <div class="movie">
+         <iframe width="500" height="315" src="https://www.youtube.com/embed/rfdL3I8ORrA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <p>tea</p>
+       </div>
+
+       <div class="movie">
+         <iframe width="500" height="315" src="https://www.youtube.com/embed/_mUuYfLbkrg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <p>White</p>
+       </div>
+
+
+
+</div>
+<button class="scroll-top" id="js-button"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
 
       </main>
 
   </body>
 
   <footer>
-    <div id="sns">
-    <a href="https://open.spotify.com/album/69daI64fYAT6R41YYVu0aE?si=8C8urKzXTZmLoqhepfMcDA"><i class="fab fa-spotify fa-2x"></i></a>
-    <a href="https://music.apple.com/jp/album/turn-on-tune-in-single/1497476949"><i class="fab fa-apple fa-2x"></i></a>
-    <a href="https://www.youtube.com/channel/UCxTqykWVNZ-_SduU85az5mg"><i class="fab fa-youtube fa-2x"></i></a>
-    <a href="https://twitter.com/mofo_tw"><i class="fab fa-twitter fa-2x"></i></a>
-    <a href="index.html"><i class="fab fa-instagram fa-2x"></i></a>
-   </div>
+
   </footer>
 
 </html>
