--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <div>
-        <a href="index.html"><img id="logo"src="logo.png" alt="logo"></a>
+        <a href="index.html"><img id="logo"src="logo2.png" alt="logo"></a>
       </div>
       <div class="nav">
       <li><a href="music.html">Music</a></li>
