--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <div>
-        <a href="index.html"><img id="logo"src="logo2.png" alt="logo"></a>
+        <a href="index.html"><img id="logo"src="logo.png" alt="logo"></a>
       </div>
       <div class="nav">
       <li><a href="music.html">Music</a></li>
@@ -46,6 +46,15 @@
 
       </main>
 
+      <div class="livesec">
+        <img src="index2.png" class="mokuzi">
+
+      </div>
+
+      <div class="consec">
+      <img src="index2.png" alt="" class="mokuzi">
+      </div>
+
   </body>
 
   <footer>
@@ -55,7 +64,11 @@
     <a href="https://www.youtube.com/channel/UCxTqykWVNZ-_SduU85az5mg"><i class="fab fa-youtube fa-2x"></i></a>
     <a href="https://twitter.com/mofo_tw"><i class="fab fa-twitter fa-2x"></i></a>
     <a href="index.html"><i class="fab fa-instagram fa-2x"></i></a>
+
+
    </div>
+   <br><br>
+   <p>Copyright © 2020 Mofo All Right Reserved</p>
   </footer>
 
 </html>
