--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="favicon.ico">
+    <script type="text/javascript" src="script.js"></script>
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans+JP:400,700" rel="stylesheet">
   </head>
 
   <body>
@@ -21,6 +23,7 @@
       <li><a href="live.html">Live</a></li>
       <li><a href="bio.html">Bio</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="contact.html">Link</a></li>
       </div>
       </header>
 
@@ -28,32 +31,61 @@
         <p id="from"><i class="fas fa-map-marker-alt "></i> Fukuoka/Japan</p>
         <section id="galla">
           <article>
-            <img src="1.png" alt="">
+            <img src="1.png" alt="" onclick="pen()" class="point">
           </article>
 
           <article>
-            <img src="2.png" alt="">
+            <img src="2.png" alt="" class="point">
           </article>
 
           <article>
-            <img src="3.png" alt="">
+            <img src="3.png" alt="" class="point">
           </article>
 
           <article>
-            <img src="4.png" alt="">
+            <img src="4.png" alt="" class="point">
           </article>
         </section>
 
       </main>
 
       <div class="livesec">
-        <img src="index2.png" class="mokuzi">
-
+        <img src="index2.png" class="mokuzi2">
+        <div class="day">
+        <ul>-2020年1月30日(木)
+           @東京キネマ倶楽部
+           開場 : 18:15
+           開演 : 19:00
+        </ul>
+<ul>-2020年1月30日(木)
+@東京キネマ倶楽部
+開場 : 18:15
+開演 : 19:00</ul>
+</div>
       </div>
 
       <div class="consec">
-      <img src="index2.png" alt="" class="mokuzi">
+        <img src="index3.png" alt="" class="mokuzi">
+
+       <div id="mailbox">
+        <p id="mail">Mail</p>
+       <p id="mailp">mofo0327@gmail.com</p>
       </div>
+      </div>
+<div id="mask"  onclick="pen3()">
+</div>
+
+<section id="modal">
+  <div class="movie-wrap">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/v7TAWHKYTYA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</section>
+
+<section id="modal2">
+  <div class="movie-wrap">
+<iframe width="673" height="379" src="https://www.youtube.com/embed/MZQm7CPclZc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</section>
 
   </body>
 
