--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans+JP:400,700" rel="stylesheet">
-  </head>
-
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
   <body>
     <header>
       <div>
@@ -30,8 +29,8 @@
       <main>
         <p id="from"><i class="fas fa-map-marker-alt "></i> Fukuoka/Japan</p>
         <section id="galla">
-          <article>
-            <img src="1.png" alt="" onclick="pen()" class="point">
+          <article >
+            <img src="1.png" alt="" class="point" onclick="pen()">
           </article>
 
           <article>
@@ -39,7 +38,7 @@
           </article>
 
           <article>
-            <img src="3.png" alt="" class="point">
+            <img src="3.png" alt="" class="point" onload="fadein()">
           </article>
 
           <article>
@@ -65,7 +64,7 @@
       </div>
 
       <div class="consec">
-        <img src="index3.png" alt="" class="mokuzi">
+        <img src="index3.png" alt="" class="mokuzi"><i class="fas fa-microphone-alt fa-3x"></i>
 
        <div id="mailbox">
         <p id="mail">Mail</p>
