--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="contact.html">Link</a></li>
       </div>
       </header>
-
+<div class="loader" id="kesu">Loading...</div>
       <main>
         <p id="from"><i class="fas fa-map-marker-alt "></i> Fukuoka/Japan</p>
         <section id="galla">
@@ -42,7 +42,7 @@
           </article>
 
           <article>
-            <img src="4.png" alt="" class="point">
+            <img src="4.png" alt="" class="point" onload="hide()">
           </article>
         </section>
 
