--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
   <body>
     <header>
-      <div>
+      <div id=top>
         <a href="index.html"><img id="logo"src="logo.png" alt="logo"></a>
       </div>
       <div class="nav">
@@ -25,7 +25,6 @@
       <li><a href="contact.html">Link</a></li>
       </div>
       </header>
-<div class="loader" id="kesu">Loading...</div>
       <main>
         <p id="from"><i class="fas fa-map-marker-alt "></i> Fukuoka/Japan</p>
         <section id="galla">
@@ -98,6 +97,8 @@
 
 
    </div>
+
+   <a href="#top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
    <br><br>
    <p>Copyright © 2020 Mofo All Right Reserved</p>
   </footer>
