--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         <a href="index.html"><img id="logo"src="logo.png" alt="logo"></a>
       </div>
       <div class="nav">
-      <li><a href="music.html">Music</a></li>
       <li><a href="#live">Live</a></li>
-      <li><a href="bio.html">Bio</a></li>
       <li><a href="#cont">Contact</a></li>
       <li><a href="#sns">Link</a></li>
       </div>
@@ -34,15 +32,15 @@
           </article>
 
           <article>
-            <img src="2.png" alt="" class="point">
+            <img src="2.png" alt="" class="point" onclick="pen2()">
           </article>
 
           <article>
-            <img src="3.png" alt="" class="point" onload="fadein()">
+            <img src="3.png" alt="" class="point" onclick="pen4()">
           </article>
 
           <article>
-            <img src="4.png" alt="" class="point" onload="hide()">
+            <img src="4.png" alt="" class="point" onclick="pen5()">
           </article>
         </section>
 
@@ -64,7 +62,7 @@
       </div>
 
       <div class="consec" id="cont">
-        <img src="index3.png" alt="" class="mokuzi"><i class="fas fa-microphone-alt fa-3x"></i>
+        <img src="index3.png" alt="" class="mokuzi">
 
        <div id="mailbox">
         <p id="mail">Mail</p>
@@ -79,10 +77,17 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/v7TAWHKYTYA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </section>
-
-<section id="modal2">
+<section id="modatea">
   <div class="movie-wrap">
-<iframe width="673" height="379" src="https://www.youtube.com/embed/MZQm7CPclZc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rfdL3I8ORrA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+</section>
+<section id="modal3">
+  <div class="movie-wrap">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MZQm7CPclZc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  </div>
+</section>
+<section id="modal4">
+  <div class="movie-wrap">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_mUuYfLbkrg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </section>
 
