--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
       <div class="livesec" id="live">
         <img src="index2.png" class="mokuzi2">
         <div class="day">
-        <ul>-2020年1月30日(木)
-           @東京キネマ倶楽部
-           開場 : 18:15
-           開演 : 19:00
+        <ul>-終了(コロナウイルスの影響により中止となりました)　<br>2020年3月20日
+           @紺屋町MEGAHERTZ
+           開場 : 19:30
+           開演 : 20:00
         </ul>
-<ul>-2020年1月30日(木)
+<ul>-終了　2020年2月10日
 @東京キネマ倶楽部
-開場 : 18:15
-開演 : 19:00</ul>
+開場 : 19:30
+</ul>
 </div>
       </div>
 
@@ -67,6 +67,7 @@
        <div id="mailbox">
         <p id="mail">Mail</p>
        <p id="mailp">mofo0327@gmail.com</p>
+       <p>準備中</p>
       </div>
       </div>
 <div id="mask"  onclick="pen3()">
