--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       <main>
         <p id="from"><i class="fas fa-map-marker-alt "></i> Fukuoka/Japan</p>
         <section id="galla">
+          <article>
+            <img src="5.jpg" alt="" class="point" onclick="pen5()">
+          </article>
+          <article>
+            <img src="6.jpg" alt="" class="point" onclick="pen4()">
+          </article>
           <article >
             <img src="1.png" alt="" class="point" onclick="pen()">
           </article>
@@ -35,13 +41,9 @@
             <img src="2.png" alt="" class="point" onclick="pen2()">
           </article>
 
-          <article>
-            <img src="3.png" alt="" class="point" onclick="pen4()">
-          </article>
 
-          <article>
-            <img src="4.png" alt="" class="point" onclick="pen5()">
-          </article>
+
+
         </section>
 
       </main>
@@ -84,11 +86,11 @@
 </section>
 <section id="modal3">
   <div class="movie-wrap">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/MZQm7CPclZc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  </div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Xu3Z0qPWQ20" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </section>
 <section id="modal4">
   <div class="movie-wrap">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/_mUuYfLbkrg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/wn8bO-BDFP4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </section>
 
